NEXT
  - Gravis Ultrasound: Officially, registers 0x0-0xF, the voice
    control registers, are documented to have a 0x0-0xF write and
    0x80-0x8F read alias. Unofficially, according to the behavior
    of 1997 demo "Out of Control" by Contract, all GUS registers
    have a N and (N+0x80) alias, or at least register 0x4C, and
    you can read them back from either index. Or else the demo
    fails to detect the GUS. So add this alias, but only if
    enabled in dosbox.conf. Real hardware testing is required to
    know if the actual GUS behaves this way and which versions.
    (joncampbell123).
  - Move the INT 3 default vector to well within the initial 16
    bytes of the DOS kernel, away from the List of Lists and SFT.
    The previous placement caused certain versions of Windows 3.2
    (yes, the Chinese version) to crash on startup. (joncampbell123).
  - When using the running program to name screenshots and such,
    filter out all invalid characters so that Windows users can
    take snapshots even if junk characters are there (joncampbell123).
  - DOS FAT driver: If INT 13h reports disk change, adapt floppy
    disk geometry to new disk image according to media byte. This
    allows DS_BLISS to present it's 720K fake floppy even if the
    user initially mounted a 1.44MB floppy to drive A: (joncampbell123).
  - INT 10 mode list: Add "pitch" parameter. If nonzero, the value
    (in pixels) is how to program the pixels per scanline when
    setting the mode.
  - VESAMOED: Add -pitch option to control the pitch (pixels per
    scanline). The intent is to work around DOS games that assume
    nonstandard pixels per scanline by allowing the VESA BIOS mode
    to use a different one. For example, Line Wars II has an S3
    acceleration mode that uses 800x600, but for whatever reason,
    assumes the video mode is 1024 pixels per scanline, and will
    render garbled graphics if that is not the case. (joncampbell123).